--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+  <!--  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">-->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="manifest" href="manifest/site.webmanifest">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/slick.css">
@@ -96,8 +100,8 @@
                     <div class="header-navbar">
                         <div class="header-logo">
                             <a href="onepage-3.html"><img class="light-version-logo" src="fonts/logo.svg" alt="logo"></a>
-                            <a href="onepage-3.html"><img class="dark-version-logo" src="fonts/logo-3.svg" alt="logo"></a>
-                            <a href="onepage-3.html"><img class="sticky-logo" src="fonts/logo-2.svg" alt="logo"></a>
+                            <a href="onepage-3.html"><img class="dark-version-logo" src="fonts/logo.svg" alt="logo"></a>
+                            <a href="onepage-3.html"><img class="sticky-logo" src="fonts/logo.svg" alt="logo"></a>
                         </div>
                         <div class="header-action">
                             <ul class="list-unstyled">
@@ -487,7 +491,7 @@
                             <div class="address-list">
                                 <div class="address">
                                     <h6 class="title">Mail</h6>
-                                    <p><a href="mailto: anupambhosle38@gmail.com">companyname.anupam@gmail.com</a></p>
+                                    <p><a href="mailto: growupfast.ads@gmail.com">growupfast.ads@gmail.com</a></p>
                                 </div>
                                 <div class="address">
                                     <h6 class="title">Address</h6>
@@ -541,8 +545,8 @@
                         <div class="col-md-6">
                             <div class="footer-bottom-link">
                                 <ul class="list-unstyled">
-                                    <li><a href="#">Privacy Policy</a></li>
-                                    <li><a href="#">Terms of Use</a></li>
+                                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                    <li><a href="Terms-of-services.html">Terms of Use</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -579,15 +583,9 @@
                             <div class="contact-inner">
                                 <class="address">
                                     <span class="title">Contact Information</span>
-                                    <p>Theodore Lowe, Ap #867-859 <br> Sit Rd, Azusa New York</p>
+                                    <p>912 Park Ave, Ketchikan, Alaska 99901, USA</p>
                                 </address>
-                                <address class="address">
-                                    <span class="title">We're Available 24/7. Call Now.</span>
-                                    <a class="tel" href="tel:8884562790"><i class="fas fa-phone"></i>(888)
-                                        456-2790</a>
-                                    <a class="tel" href="tel:12125553333"><i class="fas fa-fax"></i>(121)
-                                        255-53333</a>
-                                </address>
+                              
                             </div>
                             <div class="contact-inner">
                                 <h5 class="title">Find us here</h5>
