--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                 <div class="container">
                     <div class="header-navbar">
                         <div class="header-logo">
-                            <a href="onepage-3.html"><img class="light-version-logo" src="fonts/logo.svg" alt="logo"></a>
-                            <a href="onepage-3.html"><img class="dark-version-logo" src="fonts/logo.svg" alt="logo"></a>
-                            <a href="onepage-3.html"><img class="sticky-logo" src="fonts/logo.svg" alt="logo"></a>
+                            <a href="#"><img class="light-version-logo" src="fonts/logo.svg" alt="logo"></a>
+                            <a href="#"><img class="dark-version-logo" src="fonts/logo.svg" alt="logo"></a>
+                            <a href="#"><img class="sticky-logo" src="fonts/logo.svg" alt="logo"></a>
                         </div>
                         <div class="header-action">
                             <ul class="list-unstyled">
