--- a/terms-of-services.html
+++ b/terms-of-services.html
@@ -5,8 +5,13 @@
     <title>Abstrak | Personal Portfolio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+    <!-- Favicon --><!--
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">-->
+
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="manifest" href="manifest/site.webmanifest">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/slick.css">
@@ -95,9 +100,9 @@
                 <div class="container">
                     <div class="header-navbar">
                         <div class="header-logo">
-                            <a href="onepage-3.html"><img class="light-version-logo" src="fonts/logo.svg" alt="logo"></a>
-                            <a href="onepage-3.html"><img class="dark-version-logo" src="fonts/logo-3.svg" alt="logo"></a>
-                            <a href="onepage-3.html"><img class="sticky-logo" src="fonts/logo-2.svg" alt="logo"></a>
+                        <a href="index.html"><img class="light-version-logo" src="fonts/logo.svg" alt="logo"></a>
+                        <a href="index.html"><img class="dark-version-logo" src="fonts/logo.svg" alt="logo"></a>
+                        <a href="index.html"><img class="sticky-logo" src="fonts/logo.svg" alt="logo"></a>
                         </div>
                         <div class="header-action">
                             <ul class="list-unstyled">
