--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <!-- Meta Data -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Abstrak | Personal Portfolio</title>
+    <title>Growupfast AdDesigning  Agency </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
@@ -605,10 +605,10 @@
                                 <h5 class="title">Find us here</h5>
                                 <div class="contact-social-share">
                                     <ul class="social-share list-unstyled">
-                                        <li><a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="https://www.behance.net/"><i class="fab fa-behance"></i></a></li>
-                                        <li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a></li>
+                                        <li><a href="https://www.facebook.com/profile.php?id=100094458293719"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li><a href="https://twitter.com/Anupam021866692"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="https://www.behance.net/growupfadsage"><i class="fab fa-behance"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/in/growupfast-ads-agency-60b911283/"><i class="fab fa-linkedin-in"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
