--- a/terms-of-services.html
+++ b/terms-of-services.html
@@ -2,7 +2,7 @@
     <!-- Meta Data -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Abstrak | Personal Portfolio</title>
+    <title>Terms of Services</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon --><!--
@@ -109,7 +109,7 @@
                             <ul class="list-unstyled">
                                 <li class="header-social-link">
                                     <ul class="social-icon-list list-unstyled">
-                                        <li><a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
+                                       <li><a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a></li>
                                         <li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a></li>
                                         <li><a href="https://www.behance.net/"><i class="fab fa-behance"></i></a></li>
