--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Growupfast AdDesigning  Agency </title>
-    <meta name="description" content="">
+    <meta name="description" content="Drive success with our ads design agency. Captivating visuals, strategic messaging. Maximize advertising potential. Partner with us for exceptional designs that leave an impression. Elevate campaigns, achieve goals.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
   <!--  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">-->
