--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Privacy Policy </title>
-    <meta name="description" content="">
+    <meta name="description" content="At Grow Up Fast, accessible from growupfast2023.netlify.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Grow Up Fast and how we use it.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon --><!--
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">-->
