--- a/terms-of-services.html
+++ b/terms-of-services.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Terms of Services</title>
-    <meta name="description" content="">
+    <meta name="description" content="By accessing this Website, accessible from growupfast2023.netlify.com, you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protected by copyright and trade mark law.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon --><!--
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">-->
